--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -21,6 +21,7 @@ jobs:
         uses: team247/auto-code-review@main
         with:
           api-key: ${{ secrets.ANTHROPIC_API_KEY }}
+          oauth-token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           base-sha: ${{ github.event.pull_request.base.sha }}
           head-sha: ${{ github.event.pull_request.head.sha }}
