--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -9,6 +9,10 @@ on:
       - staging
       - develop
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   review:
     runs-on: ubuntu-latest
